fix(components/molecule/accordion): fixed disappearing border on safari

--- a/components/molecule/accordion/src/_settings.scss
+++ b/components/molecule/accordion/src/_settings.scss
@@ -15,5 +15,7 @@ $p-accordion-title: $p-m $p-l !default;
 $ff-molecule-accordion-title: $ff-sans-serif !default;
 $fw-molecule-accordion-title: $fw-regular !default;
 $bxsh-accordion-tab-scrollbar-thumb: 0 0 1px $c-gray-lightest !default;
-$trs-accordion-tab-content: all 0.25s ease-in-out !default;
+$trs-accordion-tab-content: max-height 0.25s ease-in-out !default;
+$trs-accordion-tab-title: border-bottom 20ms ease-out !default;
+$trs-close-accordion-tab-title: border-bottom 0 ease-out !default;
 $m-accordion-tab-btn: $m-m !default;
